k8s_yaml/easy-auth-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: easy-auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: easy-auth
  template:
    metadata:
      labels:
        app: easy-auth
    spec:
      containers:
        - name: easy-auth
          image: yaknafo/easy-auth:1.02
          ports:
            - containerPort: 9110
