k8s_yaml/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tyk-redis
  labels:
    app: tyk-redis
spec:
  selector:
    matchLabels:
      app: tyk-redis
  replicas: 1
  template:
    metadata:
      labels:
        app: tyk-redis
    spec:
      containers:
        - name: master
          image: k8s.gcr.io/redis:e2e
          resources:
            limits:
              memory: 512Mi
              cpu: "1"
            requests:
              memory: 256Mi
              cpu: "0.2"
          ports:
            - containerPort: 6379
