k8s_yaml/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tyk-redis
  labels:
    app: tyk-redis
spec:
  ports:
    - port: 6379
      targetPort: 6379
  selector:
    app: tyk-redis
