k8s_yaml/ingress-nginx-auth-url.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
  name: ingress-with-auth
spec:
  rules:
  - host: local-easy-auth.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name:  gateway-svc-tyk-oss-tyk-gateway
            port:
              number: 8080
#            namespace: tyk-oss
  ingressClassName: nginx
