k8s_yaml/ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-myservicea
  annotations:
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required - foo'
spec:
  rules:
  - host: admin-local-easy-auth.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: easy-auth-service
            port:
              number: 9110
  ingressClassName: nginx
---
#apiVersion: networking.k8s.io/v1
#kind: Ingress
#metadata:
#  name: ingress-myserviceb
#spec:
#  rules:
#  - host: local-easy-auth.com
#    http:
#      paths:
#      - path: /
#        pathType: Prefix
#        backend:
#          service:
#            name: easy-auth-service
#            port:
#              number: 9110
  ingressClassName: nginx
